--- a/jobsheet_02/src/modul02_2.ipynb
+++ b/jobsheet_02/src/modul02_2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -167,13 +167,13 @@
        "4      0            373450   8.0500  DECK        S  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dpath = 'data/Titanic-Dataset-fixed.csv'\n",
+    "dpath = '../data/Titanic-Dataset-fixed.csv'\n",
     "df = pd.read_csv(dpath)\n",
     "df.head()"
    ]
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "4         0       3  35.0    male  DECK"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,9 +284,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'dataframe_image'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mdataframe_image\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mdfi\u001b[39;00m\n\u001b[1;32m      2\u001b[0m dfi\u001b[39m.\u001b[39mexport(df\u001b[39m.\u001b[39mhead(), \u001b[39m'\u001b[39m\u001b[39mslice_featarue.png\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'dataframe_image'"
+     ]
+    }
+   ],
    "source": [
     "import dataframe_image as dfi\n",
     "dfi.export(df.head(), 'slice_featarue.png')"
@@ -302,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +417,7 @@
        "4         0       3  35.0    1    115"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +537,7 @@
        "4         0       3  0.407926    1    115"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
