--- a/jobsheet_02/src/modul02_3.ipynb
+++ b/jobsheet_02/src/modul02_3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "4         0       3  0.407926    1    115"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('data/Titanic-Dataset-selected.csv')\n",
+    "df = pd.read_csv('../data/Titanic-Dataset-selected.csv')\n",
     "df.head()"
    ]
   },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "4         0       3  0.407926    1    115"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df2 = pd.read_csv('data/Titanic-Dataset-selected.csv')\n",
+    "df2 = pd.read_csv('../data/Titanic-Dataset-selected.csv')\n",
     "df2.head()"
    ]
   },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -318,12 +318,12 @@
       "1    273\n",
       "Name: Survived, dtype: int64\n",
       "Jumlah label data val:\n",
-      "0    55\n",
-      "1    34\n",
+      "0    51\n",
+      "1    38\n",
       "Name: Survived, dtype: int64\n",
       "Jumlah label data test:\n",
-      "0    55\n",
-      "1    35\n",
+      "0    59\n",
+      "1    31\n",
       "Name: Survived, dtype: int64\n"
      ]
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "4         0       3  0.407926    1    115"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df3 = pd.read_csv('data/Titanic-Dataset-selected.csv')\n",
+    "df3 = pd.read_csv('../data/Titanic-Dataset-selected.csv')\n",
     "df3.head()"
    ]
   },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
        "4         0       3  0.407926    1    115"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df4 = pd.read_csv('data/Titanic-Dataset-selected.csv')\n",
+    "df4 = pd.read_csv('../data/Titanic-Dataset-selected.csv')\n",
     "df4.head()"
    ]
   },
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1015,13 +1015,6 @@
     "for train_index, test_index in kf2_split:\n",
     "    print(f'Index train: {train_index} | Index test: {test_index}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
