--- a/jobsheet_02/src/modul02_4.ipynb
+++ b/jobsheet_02/src/modul02_4.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: Pillow in /Users/afif/anaconda3/lib/python3.11/site-packages (9.4.0)\n"
+      "Requirement already satisfied: Pillow in /Users/dhayuintan/anaconda3/lib/python3.11/site-packages (9.4.0)\n"
      ]
     }
    ],
@@ -32,13 +32,13 @@
    "source": [
     "from PIL import Image\n",
     " \n",
-    "img = Image.open('img/Lenna_(test_image).png')\n",
+    "img = Image.open('../img/Lenna_(test_image).png')\n",
     "img.show() # tampilkan gambar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
