--- a/jobsheet_04/src/modul04_4.ipynb
+++ b/jobsheet_04/src/modul04_4.ipynb
@@ -4,27 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1><b>Praktikum 4"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2>Klasifikasi Naive Bayes Pada Data Multinomial"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pada percobaan ini, kita akan menggunakan nilai multinomial untuk melakukan klasifikasi dengan Naive Bayes. Nilai multinomial adalah data yang nilainya didapatkan dari proses menghitung. Sehingga, pada konteks fitur, nilai multinomial fitur berdasarkan proses perhitungan (counting) probabilitas kemunculan fitur tersebut dalam sebuah data. Contoh klasik fitur multinomial adalah perhitungan jumlah kata pada klasifikasi teks.Pada percobaan ini, kasus klasifikasi teks diberikan untuk mempermudah pemahaman terhadap algoritma Naive Bayes tipe Multinomial."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Praktikum 4\n",
+    "\n",
+    "### Klasifikasi Naive Bayes Pada Data Multinomial\n",
+    "\n",
+    "Pada percobaan ini, kita akan menggunakan nilai multinomial untuk melakukan klasifikasi dengan Naive Bayes. Nilai multinomial adalah data yang nilainya didapatkan dari proses menghitung. Sehingga, pada konteks fitur, nilai multinomial fitur berdasarkan proses perhitungan (counting) probabilitas kemunculan fitur tersebut dalam sebuah data. Contoh klasik fitur multinomial adalah perhitungan jumlah kata pada klasifikasi teks.Pada percobaan ini, kasus klasifikasi teks diberikan untuk mempermudah pemahaman terhadap algoritma Naive Bayes tipe Multinomial.\n",
+    "\n",
     "Kita akan menggunakan data spam.csv yang berisi data teks sms dengan label spam dan ham. Spam adalah sms sampah, sedangkan ham adalah sebaliknya"
    ]
   },
@@ -32,19 +17,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3><b>Load Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "**Load Data**\n",
+    "\n",
     "Pada tahap ini kita akan loading data ke dalam data frame dan melakukan inspeksi sederhana untuk memastikan apakah kita perlu proses pra pengolahan data sebelum melakukan ekstraksi fitur dan permodelan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +116,7 @@
        "4        NaN        NaN  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,38 +134,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Terdapat 3 kolom yang tidak bermanfaat untuk proses selanjutnya, maka kita perlu membuang kolom tersebut. Selain itu, untuk memudahkan pembacaan data, kita juga akan mengubah nama kolom v1 yang berupa label dan v2 yang berupa teks sms"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3><b>Pra Pengolahan Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Terdapat 3 kolom yang tidak bermanfaat untuk proses selanjutnya, maka kita perlu membuang kolom tersebut. Selain itu, untuk memudahkan pembacaan data, kita juga akan mengubah nama kolom v1 yang berupa label dan v2 yang berupa teks sms\n",
+    "\n",
+    "**Pra Pengolahan Data**\n",
+    "\n",
     "Beberapa hal yang akan dilakukan pada tahap ini yaitu,\n",
+    "\n",
     "1. Drop kolom yang tidak digunakan\n",
     "2. Ubah nama kolom v1 (label) dan v2 (teks sms)\n",
     "3. Inspeksi Data\n",
     "4. Encode label\n",
-    "5. Memisahkan fitur dengan label"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h4><b>Drop Kolom"
+    "5. Memisahkan fitur dengan label\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Drop Kolom**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +220,7 @@
        "4   ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,12 +237,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4><b>Ubah Nama Kolom V1 dan V2"
+    "**Ubah Nama Kolom V1 dan V2**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +309,7 @@
        "4    ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,12 +332,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4><b>Inspeksi Data"
+    "**Inspeksi Data**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -418,12 +386,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4><b>Encode Label"
+    "**Encode Label**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +458,7 @@
        "4       0  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,12 +481,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Memisahkan Fitur dengan Label"
+    "**Memisahkan Fitur dengan Label**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,19 +498,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4><b>Ekstraksi fitur"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "**Ekstraksi fitur**\n",
+    "\n",
     "Ekstraksi fitur untuk setiap SMS akan menggunakan konsep Bag of Words. Kita dapat menggunakan fungsi CountVectorizer dari scikit-learn. Akan tetapi untuk mencegah leaking information kita akan melakukan split data terlebih dahulu, baru melakukan transformasi terhadap data training dan testing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,24 +530,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'CountVectorizer' object has no attribute 'get_feature_names'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(bow\u001b[39m.\u001b[39mget_feature_names())\n\u001b[1;32m      2\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mDimensi data: \u001b[39m\u001b[39m{\u001b[39;00mX_train\u001b[39m.\u001b[39mshape\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'CountVectorizer' object has no attribute 'get_feature_names'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7727\n",
+      "Dimensi data: (4457, 7727)\n"
      ]
     }
    ],
    "source": [
-    "print(bow.get_feature_names())\n",
-    "print(f'Dimensi data: {X_t rain.shape}')"
+    "print(len(bow.get_feature_names()))\n",
+    "print(f'Dimensi data: {X_train.shape}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Training dan Evaluasi Model**\n",
+    "\n",
+    "Kita akan menggunakan algoritma Multinomial Naive Bayes. Fungsi MultinomialNB dari scikit-learn dapat digunakan pada kasus ini."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil akurasi data train: 0.9946152120260264\n",
+      "Hasil akurasi data test: 0.9775784753363229\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Inisiasi MultinomialNB\n",
+    "mnb = MultinomialNB()\n",
+    "\n",
+    "# Fit model\n",
+    "mnb.fit(X_train, y_train)\n",
+    "\n",
+    "# Prediksi dengan data training\n",
+    "y_pred_train = mnb.predict(X_train)\n",
+    "\n",
+    "# Evaluasi akurasi data training\n",
+    "acc_train = accuracy_score(y_train, y_pred_train)\n",
+    "\n",
+    "# Prediksi dengan data training\n",
+    "y_pred_test = mnb.predict(X_test)\n",
+    "\n",
+    "# Evaluasi akurasi data training\n",
+    "acc_test = accuracy_score(y_test, y_pred_test)\n",
+    "\n",
+    "# Print hasil evaluasi\n",
+    "print(f'Hasil akurasi data train: {acc_train}')\n",
+    "print(f'Hasil akurasi data test: {acc_test}')"
    ]
   }
  ],
@@ -604,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
